# async-stm-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.circleci/: config.yml
src/: aux.rs  auxtx.rs  lib.rs  ops.rs  test.rs  transaction.rs  vars.rs  version.rs
src/queues/: mod.rs  tbqueue.rs  tchan.rs  tqueue.rs  tvecdequeue.rs
