[package]
name = "async-stm"
version = "0.4.0"
edition = "2021"
authors = ["Akosh Farkash <aakoshh@gmail.com>"]
description = "Asynchronous Software Transactional Memory"
keywords = ["stm", "async"]
license = "MIT"
repository = "https://github.com/aakoshh/async-stm-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.0"
tokio = { version = "1.15.0", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1"

[features]
default = ["queues"]
queues = []

# For running benchmarks, which require nightly.
# Unfortunately tests fail on nightly since `rustc 1.61.0-nightly (8769f4ef2 2022-03-02)`
# during the linking phase. They work on `rustc 1.61.0-nightly (532d3cda9 2022-02-23)`,
# but the `lock_api` 0.4.7 fails on that one. Luckily the build and tests both work on
# stable, so if we reserve nightly for benches, it should be fine.
# Meanwhile if we use nightly, we can use `cargo +stable test` to run tests,
# and `cargo --features "unstable" bench` to run benches.
# TODO: Move benchmarks under the `benches` directory.
unstable = []
